# MISSING-PERSON-DETECTION

./: README.md
PersonDetectSystem/: database.py  database.sqlite  face_recognition.py  main.py  pyproject.toml  video_processor.py
PersonDetectSystem/attached_assets/: Pasted-PROJECT-NAME-Missing-Person-Detection-System-Python-FastAPI-OpenCV-MediaPipe-SQLite-Bu-1764131176622_1764131176623.txt
PersonDetectSystem/templates/: admin.html  admin_login.html  index.html
backend/: admin_app.py  app.py  config.py
backend/database/: operations.py  schema.py
backend/models/: face_handler.py  gemini_handler.py  model testing.py  reid_handler.py
